@@ -121,7 +121,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 1, 1, "final", 1)
-__version_time__ = "30 Jun 2023 05:39 UTC"
+__version_time__ = "29 Jul 2023 08:18 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
